--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calculadora Simples</title>
-        <link rel="stylesheet" type="text/css" href="estilo.css" />
+        <link rel="stylesheet" type="text/css" href="estilo.css"/>
         <link rel="icon" href="icon/Calculator_S2_M_icon-icons.com_76646.ico">
     </head>
     <body>
@@ -36,7 +36,7 @@
                     <button class="equal">=</button>
                 </div>
             </div>
-            <script src="script.js"></script>
+            <script src="./src/script.js"></script>
 
             <footer>
                 <p>
