--- a/index.html
+++ b/index.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Simples</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
-</head>
-<body>
-    <h1>Calculadora Simples</h1>
-    <div class="calculadora">
-        <input type="text" id="display" readonly>
-        <div class="keypad">
-            <button class="clear">C</button>
-            <button class="erase">CE</button>
-            <button class="operator">%</button>
-            <button class="operator">÷</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="operator">x</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="operator">-</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="operator">+</button>
-            <button class="number">0</button>
-            <button class="number">.</button>
-            <button class="operator">^</button>
-            <button class="equal">=</button>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Calculadora Simples</title>
+        <link rel="stylesheet" type="text/css" href="estilo.css" />
+    </head>
+    <body>
+        <main>
+            <h1>Calculadora Simples</h1>
+            <div class="calculadora">
+                <input type="text" id="display" readonly />
+                <span id="easteregg"></span>
+                <div class="keypad">
+                    <button class="clear">C</button>
+                    <button class="erase">CE</button>
+                    <button class="operator">%</button>
+                    <button class="operator">&divide;</button>
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                    <button class="operator">x</button>
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                    <button class="operator">-</button>
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                    <button class="operator">+</button>
+                    <button class="number">0</button>
+                    <button class="number">.</button>
+                    <button class="operator">^</button>
+                    <button class="equal">=</button>
+                </div>
+            </div>
+            <script src="script.js"></script>
+
+            <footer>
+                <p>
+                    Desenvolvido por
+                    <a href="https://github.com/luiz-david05" target="_blank"
+                        >Luiz David</a
+                    >
+                </p>
+                <p>Stacks usadas: <strong>Typescript/Javascript</strong></p>
+                <p>Todos os direitos reservados &copy; 2023</p>
+            </footer>
+        </main>
+    </body>
 </html>
