change style and add icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calculadora Simples</title>
         <link rel="stylesheet" type="text/css" href="estilo.css" />
+        <link rel="icon" href="icon/Calculator_S2_M_icon-icons.com_76646.ico">
     </head>
     <body>
         <main>
@@ -13,7 +14,7 @@
                 <input type="text" id="display" readonly />
                 <span id="easteregg"></span>
                 <div class="keypad">
-                    <button class="clear">C</button>
+                    <button class="clear">AC</button>
                     <button class="erase">CE</button>
                     <button class="operator">%</button>
                     <button class="operator">&divide;</button>
