add historico e aumentando tamanho do display

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calculadora Simples</title>
-        <link rel="stylesheet" type="text/css" href="estilo.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
         <link rel="icon" href="icon/Calculator_S2_M_icon-icons.com_76646.ico">
     </head>
     <body>
         <main>
             <h1>Calculadora Simples</h1>
-            <div class="calculadora">
-                <input type="text" id="display" readonly />
-                <span id="easteregg"></span>
+            <div id="historico">
+        </div>
+        <div class="calculadora">
+            <input type="text" id="display" readonly/>
+            <span id="easteregg"></span>
                 <div class="keypad">
                     <button class="clear">AC</button>
                     <button class="erase">CE</button>
@@ -45,7 +47,6 @@
                         >Luiz David</a
                     >
                 </p>
-                <p>Stacks usadas: <strong>Typescript/Javascript</strong></p>
                 <p>Todos os direitos reservados &copy; 2023</p>
             </footer>
         </main>
