source: update repo, eliminate typescript

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calculadora Simples</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
-        <link rel="icon" href="icon/Calculator_S2_M_icon-icons.com_76646.ico">
+        <link rel="icon" href="icon/icon_calculator.ico">
     </head>
     <body>
+        <h1>Calculadora Simples</h1>
         <main>
-            <h1>Calculadora Simples</h1>
-            <div id="historico">
-        </div>
-        <div class="calculadora">
-            <input type="text" id="display" readonly/>
-            <span id="easteregg"></span>
+            <div id="historico"></div>
+            <div class="calculadora">
+                <input type="text" id="display" readonly/>
+                <span id="easteregg"></span>
                 <div class="keypad">
                     <button class="clear">AC</button>
                     <button class="erase">CE</button>
